form fixed on mobile, added analytics, main body height on phone decreased

--- a/src/scss/components/main-body.scss
+++ b/src/scss/components/main-body.scss
@@ -1,6 +1,6 @@
 .main-body {
     height: 75vh;
-    max-height: 800px;
+    max-height: 550px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -27,7 +27,7 @@
     }
     @include breakpoint(medium down){
         flex-direction: column;
-        overflow: scroll;
+        overflow: auto;
         .img-buttons__wrapper{
             top: unset;
             bottom: 0;
