--- a/src/scss/templates/_contact.scss
+++ b/src/scss/templates/_contact.scss
@@ -74,6 +74,9 @@
                         margin: $global-margin 0;
                     }
                 }
+                .form__wrapper{
+                    padding: 0 $global-padding;
+                }
             }
         }
     }
